Fixing overflow for examples.

--- a/org.matonto.web/src/main/resources/public/modules/discover/sub-modules/explore/directives/classCards/classCards.scss
+++ b/org.matonto.web/src/main/resources/public/modules/discover/sub-modules/explore/directives/classCards/classCards.scss
@@ -52,6 +52,10 @@
                         margin-bottom: 5px;
                     }
                     
+                    em {
+                        display: block;
+                    }
+                    
                     .text-muted {
                         overflow: hidden;
                         text-overflow: ellipsis;
